--- a/templates/index.html
+++ b/templates/index.html
@@ -118,4 +118,5 @@
     });
   </script>
 </body>
+  <iframe src="https://flask-dashboard.onrender.com" width="100%" height="600" style="border:none;"></iframe>
 </html>
