--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
   </table>
 
   <script>
-    const socket = io();
+    const socket = io("https://flask-dashboard.onrender.com");
     let updatesPaused = false;
 
     function pauseUpdates() {
