--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+const socket = io("http://127.0.0.1:5000");
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -87,7 +88,6 @@
   </table>
 
   <script>
-    const socket = io("https://flask-dashboard.onrender.com");
     let updatesPaused = false;
 
     function pauseUpdates() {
