--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-const socket = io("http://127.0.0.1:5000");
+const socket = io("https://flask-dashboard.onrender.com");
 <!DOCTYPE html>
 <html lang="en">
 <head>
